--- a/SUV_res/texts/ja_JP.lang
+++ b/SUV_res/texts/ja_JP.lang
@@ -1,4 +1,10 @@
 tile.suv:testpath.name=テスト道		#
 tile.suv:woodpath.name=木の道		#
 tile.suv:stonepath.name=石の道		#
+tile.suv:woodpathhalf.name=木の道のハーフブロック		#
+tile.suv:stonepathhalf.name=石の道のハーフブロック		#
 tile.suv:lightpath.name=光る道		#
+tile.suv:potatoblock.name=ジャガイモブロック		#
+tile.suv:discoloredpath.name=変色した道		#
+item.suv:hot_potato=燃え盛るベイクドポテト	#
+item.suv:burned_potato=焼け焦げたベイクドポテト	#
