--- a/SUV_res/texts/ja_JP.lang
+++ b/SUV_res/texts/ja_JP.lang
@@ -8,3 +8,4 @@ tile.suv:potatoblock.name=ジャガイモブロック		#
 tile.suv:discoloredpath.name=変色した道		#
 item.suv:hot_potato=燃え盛るベイクドポテト	#
 item.suv:burned_potato=焼け焦げたベイクドポテト	#
+item.suv:iron_pie=高ミネラルパンプキンパイ	#
